@@ -5,6 +5,8 @@
 * Bug Fixes:
 
   * Do not apply encoding if encoding equals 'none' Thanks Akinori MUSHA!
+  * Fixed Page#encoding= when changing the value from or to nil.  Made
+    it return the assigned value while at it. (Akinori MUSHA)
   * Custom request headers may be supplied WWW::Mechanize#request_headers
     RF #24516
   * HTML Parser may be set on a per instance level WWW::Mechanize#html_parser
